--- a/main.css
+++ b/main.css
@@ -1,7 +1,35 @@
 
+
+
 .main{
+   width: 100%;
+   display: block;
+   margin-left: auto;
+   margin-right: auto;
+
     align-content: center;
 }
+
+@media (min-width: 600px) {
+    .main{
+   
+   
+        width:600px;
+   
+    }
+
+
+
+  }
+
+  @media (max-width: 300px) {
+    .main{
+   
+   
+        width:300px;
+   
+    }
+  }
 .sticky-content {
     position: sticky;
     top: 0;
@@ -20,13 +48,18 @@
 
 
 .placeholder-content {
-    height: 1000px;
+    justify-content: center;
+    align-items: center;
+    height: 1150px;
     background-color: yellow;
     background: linear-gradient(180deg, rgba(255,255,0,1) 0%, rgba(255,140,0,1) 100%);
 }
 
 .contacto{
-
+display:flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
     height: 200px;
     
     padding: 10px 10px 10px 10px;
@@ -35,29 +68,46 @@
     margin-top: 10px;
     margin-left: 10px;
     margin-right: 10px;
-    background-color: white;
+    background-color: lightblue;
+}
+
+.titulo2{
+
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
 }
 
 .proyectos-titulo{
     
-    width: 100%;
-    height: 50px;
-    font-size: 24px;
-    background-color: lightblue;
-    text-align:center;
-    color: black;
-    font-family: Arial, Helvetica, sans-serif;
-    justify-content: center;
-
+   
+    height: 5vh;
 
     
+    background-color: lightblue;
+   
+    
+    
+    
+    
+
+ 
     
 
     
 }
 
-.proyectos-texto{
-    vertical-align: middle
+.texto-proyectos{
+    text-align:center;
+    font-size: 24px;
+    font-family: Arial, Helvetica, sans-serif;
+    justify-content: center;
+    vertical-align: middle;
+    height: 100%;
+    color: black;
+    display: flex;
+    
+    flex-direction: column;
+    flex-wrap: wrap;
 
 }
 
@@ -70,11 +120,15 @@
     padding: 10px 10px 10px 10px;
     padding-right: 20px;
     padding-left: 20px;
+    padding-bottom: 30px;
     margin-top: 10px;
     margin-left: 10px;
     margin-right: 10px;
     background-color: white;
 }
+
+
+
 
 .carousel-links {
     display: flex;
@@ -102,10 +156,23 @@
   
   .carousel-slides {
     width: 100%;
-    height: 30vh;
+    height: 100%;
     overflow: hidden;
     scroll-behavior: smooth;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
   }
+
+  .detalle{
+    justify-content: center;
+    height: 300px;
+    
+    padding: 10px 10px 10px 10px;
+    padding-right: 20px;
+    padding-left: 20px;
+    margin-top: 50px;
+    margin-left: 10px;
+    margin-right: 10px;
+    background-color: white;
+}
