--- a/main.css
+++ b/main.css
@@ -50,7 +50,7 @@
 .placeholder-content {
     justify-content: center;
     align-items: center;
-    height: 1150px;
+    height: 1450px;
     background-color: yellow;
     background: linear-gradient(180deg, rgba(255,255,0,1) 0%, rgba(255,140,0,1) 100%);
 }
@@ -204,7 +204,7 @@ align-items: center;
 .progress-bar div{
     height: 10px;
     border-radius: 5px;
-    width: 50%;
+    width: 0%;
    
 }
 
@@ -226,21 +226,26 @@ align-items: center;
 .html {
 
     background: yellowgreen;
+    animation: html 2s linear forwards
 }
 
 .css {
 
     background: orange;
+    animation: css 2s linear forwards
 }
 
 .react {
 
     background: blue;
+    animation: react 2s linear forwards
+
 }
 
 .shopify {
 
     background: green;
+    animation: shopify 2s linear forwards
 }
 
 .html span {
@@ -261,4 +266,66 @@ align-items: center;
 .shopify span {
 
     border: 1px solid green;
+}
+
+@keyframes html {100%{
+    width: 70%;
+}}
+
+@keyframes css {100%{
+    width: 70%;
+}}
+
+@keyframes react {100%{
+    width: 0%;
+}}
+
+@keyframes shopify {100%{
+    width: 100%;
+}}
+
+.formulario{
+    justify-content: center;
+    height: 300px;
+    
+    padding: 10px 10px 10px 10px;
+    padding-right: 20px;
+    padding-left: 20px;
+    margin-top: 50px;
+    margin-left: 10px;
+    margin-right: 10px;
+    background: white;
+    display: flex;
+   
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+
+.formulario h2{
+
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+}
+
+.formulario-texto {
+font-size: 14px;
+font-family: Arial, Helvetica, sans-serif;
+
+}
+
+.entrada-texto {
+margin-bottom: 10px;
+height: 30px;
+width: 250px;
+}
+
+.formulario div{
+    margin-bottom: 5px;
+    width: 250px;
+    display: flex;
+    justify-content: left;
+    justify-items: left;
+   align-items: flex-start;
 }
