--- a/main.css
+++ b/main.css
@@ -30,6 +30,37 @@
    
     }
   }
+
+
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+   
+  }
+
+  li {
+    float: left;
+  }
+  
+  li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  li a:hover:not(.active) {
+    background-color: #111;
+  }
+  
+  .active {
+    background-color: #04AA6D;
+  }
+
+
 .sticky-content {
     position: sticky;
     top: 0;
@@ -44,13 +75,23 @@
     font-family: Arial, Helvetica, sans-serif;
     color: white;
     font-size: 24px;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.sticky-content-opciones {
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    font-size: 20px;
 }
 
 
 .placeholder-content {
     justify-content: center;
     align-items: center;
-    height: 1450px;
+    height: 100vh;
     background-color: yellow;
     background: linear-gradient(180deg, rgba(255,255,0,1) 0%, rgba(255,140,0,1) 100%);
 }
@@ -60,7 +101,7 @@ display:flex;
 flex-direction: column;
 justify-content: center;
 align-items: center;
-    height: 200px;
+    height: 400px;
     
     padding: 10px 10px 10px 10px;
     padding-right: 20px;
@@ -98,7 +139,7 @@ align-items: center;
 
 .texto-proyectos{
     text-align:center;
-    font-size: 24px;
+    font-size: 36px;
     font-family: Arial, Helvetica, sans-serif;
     justify-content: center;
     vertical-align: middle;
@@ -115,7 +156,7 @@ align-items: center;
 
 .proyectos{
     justify-content: center;
-    height: 300px;
+    height: 500px;
     
     padding: 10px 10px 10px 10px;
     padding-right: 20px;
@@ -144,7 +185,30 @@ align-items: center;
     margin: 5px;
   }
   
-  .carousel-slides > div {
+.carousel-texto-slides{
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+    font-size: 30px;
+    font-weight: bold;
+    color: orange
+    
+    
+    ;
+    overflow: hidden;
+    display: flex;
+    scroll-behavior: smooth;
+    flex-direction: column;
+    flex-wrap: wrap;
+
+    
+
+
+
+}
+
+  .carousel-slides  div  {
     width: 100%;
     background-color: rgb(68, 68, 68);
     color: var(--secondary-font-color);
@@ -152,9 +216,14 @@ align-items: center;
     display: flex;
     justify-content: center;
     align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    position: relative;
+
   }
   
-  .carousel-slides {
+  .carousel-slides  {
     width: 100%;
     height: 100%;
     overflow: hidden;
@@ -162,11 +231,16 @@ align-items: center;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+  
+    position: relative;
+    text-align: center;
+    color: white;
+
   }
 
   .detalle{
     justify-content: center;
-    height: 300px;
+    height: 380px;
     
     padding: 10px 10px 10px 10px;
     padding-right: 20px;
@@ -178,6 +252,20 @@ align-items: center;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.skills h1 {
+text-align: center;
+    font-weight: 400;
+    letter-spacing: 1px;
+    margin-top: 40px;
+    margin-bottom: 20px;
+    color: black;
+    font-size: 28px;
+    font-family: Arial, Helvetica, sans-serif;
+    justify-content: center;
+    justify-items: center;
+
 }
 
 .skills h2 {
