--- a/main2.css
+++ b/main2.css
@@ -1,50 +1,76 @@
-
-
-
-.main{
-   width: 100%;
-   display: block;
-   margin-left: auto;
-   margin-right: auto;
-
-    align-content: center;
-}
-
-@media (min-width: 600px) {
-    .main{
-   
-   
-        width:600px;
-   
-    }
-
-}
-
-  @media (max-width: 300px) {
-    .main{
-   
-   
-        width:300px;
-   
-    }
-
-}
-
-  @media screen and (min-width: 0px) and (max-width: 400px) {
-    .sticky-content-opciones {
-    
-        display:none}
-  
+/* Add a black background color to the top navigation bar */
+.topnav {
+    overflow: hidden;
+    background-color: #e9e9e9;
   }
   
-  
-  @media screen and (min-width: 401px) and (max-width: 1024px) {
-    .sticky-content-opciones {
-    
-        display:block}
-  
+  /* Style the links inside the navigation bar */
+  .topnav a {
+    float: left;
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
   }
   
+  /* Change the color of links on hover */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  /* Style the "active" element to highlight the current page */
+  .topnav a.active {
+    background-color: #2196F3;
+    color: white;
+  }
+  
+  /* Style the search box inside the navigation bar */
+  .topnav input[type=text] {
+    float: right;
+    padding: 6px;
+    border: none;
+    margin-top: 8px;
+    margin-right: 16px;
+    font-size: 17px;
+  }
+  
+
+  .grid-container {
+    display: grid;
+    gap: 5px;
+    background-color: #2196F3;
+    padding: 5px;
+  }
+  
+  .grid-item {
+    background-color: rgba(255, 255, 255, 0.8);
+    text-align: center;
+    padding: 20px;
+    font-size: 30px;
+  }
+  
+  .item1 {
+    grid-column: 1 / span 3;
+    grid-row: 1;
+  }
+  
+  .item2 {
+    grid-column:1 / span  3;
+    grid-row: 2 
+  }
+  
+  .item3 {
+    grid-column:1 / span  3;
+    grid-row: 3 
+  }
+  
+  .item4 {
+    grid-column:1 / span  3;
+    grid-row: 4 
+  }
 
 
   ul {
@@ -118,7 +144,7 @@ display:flex;
 flex-direction: column;
 justify-content: center;
 align-items: center;
-    height: 400px;
+    height: 600px;
     
     padding: 10px 10px 10px 10px;
     padding-right: 20px;
@@ -391,7 +417,7 @@ text-align: center;
 
 .formulario{
     justify-content: center;
-    height: 300px;
+    height: 700px;
     
     padding: 10px 10px 10px 10px;
     padding-right: 20px;
@@ -434,3 +460,23 @@ width: 250px;
     justify-items: left;
    align-items: flex-start;
 }
+
+.labelr {
+    display: inline-block;
+    width: 180px;
+  }
+
+  /* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
+  @media screen and (max-width: 600px) {
+    .topnav a, .topnav input[type=text] {
+      float: none;
+      display: block;
+      text-align: left;
+      width: 100%;
+      margin: 0;
+      padding: 14px;
+    }
+    .topnav input[type=text] {
+      border: 1px solid #ccc;
+    }
+  }
